fixed up the font size and spacing of the mobile menu

--- a/component/app_links.module.css
+++ b/component/app_links.module.css
@@ -58,7 +58,15 @@
       margin: 0;
       width: 100%;
       padding-left: 0;
-      font-size: 1.75rem;
+      font-size: 1.25rem;
+   }
+
+   .innerButton {
+      padding: 2%;
+   }
+
+   .navButton {
+      border: none;
    }
 
    /** Override button highlight on mobile when hovering */
